test/fixtures/type-error/valueAsTyoe.ro
var b = 1
var a: b = 1